Updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -10,31 +10,48 @@
     <div class="calculator">
       <div class="display" id="display"></div>
       <div class="buttons">
-        <button class="gem-button red" onclick="handleClick('7')">7</button>
-        <button class="gem-button blue" onclick="handleClick('8')">8</button>
-        <button class="gem-button green" onclick="handleClick('9')">9</button>
-        <button class="gem-button yellow" onclick="handleClick('/')">/</button>
+        <button class="gem-button gem-7" onclick="handleClick('7')">7</button>
+        <button class="gem-button gem-8" onclick="handleClick('8')">8</button>
+        <button class="gem-button gem-9" onclick="handleClick('9')">9</button>
+        <button class="gem-button gem-divide" onclick="handleClick('/')">
+          /
+        </button>
 
-        <button class="gem-button red" onclick="handleClick('4')">4</button>
-        <button class="gem-button blue" onclick="handleClick('5')">5</button>
-        <button class="gem-button green" onclick="handleClick('6')">6</button>
-        <button class="gem-button yellow" onclick="handleClick('*')">*</button>
+        <button class="gem-button gem-4" onclick="handleClick('4')">4</button>
+        <button class="gem-button gem-5" onclick="handleClick('5')">5</button>
+        <button class="gem-button gem-6" onclick="handleClick('6')">6</button>
+        <button class="gem-button gem-multiply" onclick="handleClick('*')">
+          *
+        </button>
 
-        <button class="gem-button red" onclick="handleClick('1')">1</button>
-        <button class="gem-button blue" onclick="handleClick('2')">2</button>
-        <button class="gem-button green" onclick="handleClick('3')">3</button>
-        <button class="gem-button yellow" onclick="handleClick('-')">-</button>
+        <button class="gem-button gem-1" onclick="handleClick('1')">1</button>
+        <button class="gem-button gem-2" onclick="handleClick('2')">2</button>
+        <button class="gem-button gem-3" onclick="handleClick('3')">3</button>
+        <button class="gem-button gem-subtract" onclick="handleClick('-')">
+          -
+        </button>
 
-        <button class="gem-button red" onclick="handleClick('0')">0</button>
-        <button class="gem-button blue" onclick="handleClick('.')">.</button>
-        <button class="gem-button yellow" onclick="handleClick('+')">+</button>
-        <button class="gem-button pink" onclick="handleClick('=')">=</button>
+        <button class="gem-button gem-0" onclick="handleClick('0')">0</button>
+        <button class="gem-button gem-decimal" onclick="handleClick('.')">
+          .
+        </button>
+        <button class="gem-button gem-add" onclick="handleClick('+')">+</button>
+        <button class="gem-button gem-equal" onclick="handleClick('=')">
+          =
+        </button>
 
-        <!-- Added buttons to fit the grid -->
-        <button class="gem-button purple" onclick="handleClick('%')">%</button>
-        <button class="gem-button orange" onclick="handleClick('√')">√</button>
-        <button class="gem-button teal" onclick="handleClick('M')">M</button>
-        <button class="gem-button pink" onclick="handleClick('C')">C</button>
+        <button class="gem-button gem-percent" onclick="handleClick('%')">
+          %
+        </button>
+        <button class="gem-button gem-sqrt" onclick="handleClick('√')">
+          √
+        </button>
+        <button class="gem-button gem-memory" onclick="handleClick('M')">
+          M
+        </button>
+        <button class="gem-button gem-clear" onclick="handleClick('C')">
+          C
+        </button>
       </div>
     </div>
     <script src="script.js"></script>
